<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/login"
            android:id="@+id/loginBtn"
            android:padding="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/no_account_yet_create_one"
            android:textSize="16sp"
            android:id="@+id/signupLink"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/loginProgressBar"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_alignBottom="@id/loginProgressBar"
        android:layout_alignRight="@id/loginProgressBar"
        android:layout_alignLeft="@id/loginProgressBar"
        android:layout_alignEnd="@id/loginProgressBar"
        android:layout_alignStart="@id/loginProgressBar" />

</RelativeLayout>